@@ -1,5 +1,6 @@
 package ceos.backend.infra.ses;
 
+
 import ceos.backend.domain.application.domain.ApplicationQuestion;
 import ceos.backend.domain.application.domain.QuestionCategory;
 import ceos.backend.domain.application.dto.request.CreateApplicationRequest;
@@ -12,16 +13,14 @@ import ceos.backend.global.common.dto.mail.*;
 import ceos.backend.global.common.entity.Part;
 import ceos.backend.global.util.InterviewDateTimeConvertor;
 import ceos.backend.global.util.ParsedDurationConvertor;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Component;
-import org.thymeleaf.context.Context;
-
-import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
+import org.thymeleaf.context.Context;
 
 @Component
 @RequiredArgsConstructor
@@ -36,50 +35,59 @@ public class AwsSESMailGenerator {
         questions.stream()
                 .filter(question -> question.getCategory() == QuestionCategory.COMMON)
                 .sorted(Comparator.comparing(ApplicationQuestion::getNumber))
-                .forEach(question -> {
-                    commonQ.add(generateQuestion(question));
-                    commonA.add(generateAnswer(request.getCommonAnswers(), question));
-                });
+                .forEach(
+                        question -> {
+                            commonQ.add(generateQuestion(question));
+                            commonA.add(generateAnswer(request.getCommonAnswers(), question));
+                        });
 
         List<String> partQ = new ArrayList<>(), partA = new ArrayList<>();
         final Part part = request.getPart();
         questions.stream()
                 .filter(question -> question.getCategory().toString().equals(part.toString()))
                 .sorted(Comparator.comparing(ApplicationQuestion::getNumber))
-                .forEach(question -> {
-                    partQ.add(generateQuestion(question));
-                    partA.add(generateAnswer(request.getPartAnswers(), question));
-                });
+                .forEach(
+                        question -> {
+                            partQ.add(generateQuestion(question));
+                            partA.add(generateAnswer(request.getPartAnswers(), question));
+                        });
 
+        final List<String> unableTimes =
+                InterviewDateTimeConvertor.toStringDuration(request.getUnableTimes());
+        List<ParsedDuration> parsedDurations =
+                unableTimes.stream()
+                        .map(ParsedDurationConvertor::parsingDuration)
+                        .sorted(Comparator.comparing(ParsedDuration::getDuration))
+                        .sorted(Comparator.comparing(ParsedDuration::getDate))
+                        .toList();
 
-        final List<String> unableTimes = InterviewDateTimeConvertor
-                .toStringDuration(request.getUnableTimes());
-        List<ParsedDuration> parsedDurations = unableTimes.stream()
-                .map(ParsedDurationConvertor::parsingDuration)
-                .sorted(Comparator.comparing(ParsedDuration::getDuration))
-                .sorted(Comparator.comparing(ParsedDuration::getDate))
-                .toList();
-
-        List<String> dates = parsedDurations.stream()
-                .map(ParsedDuration::getDate)
-                .distinct()
-                .collect(Collectors.toList());
+        List<String> dates =
+                parsedDurations.stream()
+                        .map(ParsedDuration::getDate)
+                        .distinct()
+                        .collect(Collectors.toList());
 
         List<List<String>> times = new ArrayList<>();
-        dates.forEach(date -> times.add(parsedDurations.stream()
-                        .filter(parsedDuration -> Objects.equals(parsedDuration.getDate(), date))
-                        .map(ParsedDuration::getDuration)
-                        .collect(Collectors.toList())));
+        dates.forEach(
+                date ->
+                        times.add(
+                                parsedDurations.stream()
+                                        .filter(
+                                                parsedDuration ->
+                                                        Objects.equals(
+                                                                parsedDuration.getDate(), date))
+                                        .map(ParsedDuration::getDuration)
+                                        .collect(Collectors.toList())));
 
         Context context = new Context();
         context.setVariable("greetInfo", GreetInfo.of(request, awsSESMail.getGeneration()));
-        context.setVariable("uuidInfo", UuidInfo.of(request.getApplicantInfoVo(),UUID));
+        context.setVariable("uuidInfo", UuidInfo.of(request.getApplicantInfoVo(), UUID));
         context.setVariable("personalInfo", PersonalInfo.from(request.getApplicantInfoVo()));
         context.setVariable("schoolInfo", SchoolInfo.from(request.getApplicantInfoVo()));
         context.setVariable("ceosQuestionInfo", CeosQuestionInfo.from(request));
         context.setVariable("commonQuestionInfo", CommonQuestionInfo.of(commonQ, commonA));
-        context.setVariable("partQuestionInfo",
-                PartQuestionInfo.of(request.getPart().getPart(), partQ, partA));
+        context.setVariable(
+                "partQuestionInfo", PartQuestionInfo.of(request.getPart().getPart(), partQ, partA));
         context.setVariable("interviewDateInfo", InterviewDateInfo.of(times, dates));
 
         return context;
@@ -89,18 +97,25 @@ public class AwsSESMailGenerator {
         return applicationQuestion.getNumber() + " : " + applicationQuestion.getQuestion();
     }
 
-    private String generateAnswer(List<AnswerVo> answerVos, ApplicationQuestion applicationQuestion) {
-        final AnswerVo ans = answerVos.stream()
-                .filter(answerVo -> applicationQuestion.getId().equals(answerVo.getQuestionId()))
-                .findFirst()
-                .orElseThrow(() -> {
-                    throw QuestionNotFound.EXCEPTION;
-                });
+    private String generateAnswer(
+            List<AnswerVo> answerVos, ApplicationQuestion applicationQuestion) {
+        final AnswerVo ans =
+                answerVos.stream()
+                        .filter(
+                                answerVo ->
+                                        applicationQuestion
+                                                .getId()
+                                                .equals(answerVo.getQuestionId()))
+                        .findFirst()
+                        .orElseThrow(
+                                () -> {
+                                    throw QuestionNotFound.EXCEPTION;
+                                });
         return ans.getAnswer();
     }
 
     public String generateApplicationMailSubject(int generation) {
-        return "세오스 "+ Integer.toString(generation) +"기 지원 알림드립니다.";
+        return "세오스 " + Integer.toString(generation) + "기 지원 알림드립니다.";
     }
 
     public Context generatePasswordMailContext(AwsSESPasswordMail awsSESPasswordMail) {
